[metadata]
name = discord_messages
version = 0.0.0
author = Chase Reidinger
author_email = chase.reidinger@adepdev.com
description = A python interface for the Discord API
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/creidinger/python_discord.git'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
